--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -15,3 +15,14 @@ jobs:
 
       - name: Compile
         run: echo Hello, world!
+  DeployDev:
+    name: Deploy to Dev 
+    if: github.event_name == 'pull_request'
+    needs: [Build]
+    runs-on: ubuntu-latest
+    environment: 
+      name: Development
+      url: 'http://dev.myapp.com'
+    steps:
+      - name: Deploy
+        run: echo I am deploying! 
